# msvc-bug-multidimensional-subscript-operator

./: CMakeLists.txt
.github/workflows/: build.yml
